feat: luu lai code thiet bi truoc khi merge main
